syntax = "proto3";

import "google/protobuf/timestamp.proto";

service DiscountCalculator {
    rpc GetDiscount(GetDiscountRequest) returns (Product) {}
}

message GetDiscountRequest {
    string product_id = 1;
    string user_id = 2;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  google.protobuf.Timestamp date_of_birth = 4;
}

message Product {
  string id = 1;
  int32 price_in_cents = 2;
  string title = 3;
  string description = 4;
  Discount discount = 5;
}

message Discount {
  float pct = 1;
  int32 value_in_cents = 2;
}